--- a/public/index.html
+++ b/public/index.html
@@ -24,8 +24,12 @@
     <div class="footer">
         <div class="footer-content">
             <label for="upload-image" class="custom-label">Upload photo</label>
+            
             <input type="file" id="upload-image" accept="image/*">
             <button id="send-image" class="custom-button">Get</button>
+            <button id="download-btn">Скачать</button>
+
+
         </div>
     </div>
 
