--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
             
             <input type="file" id="upload-image" accept="image/*">
             <button id="send-image" class="custom-button">Get</button>
+            <button id="download-btn">Скачать</button>
 
 
         </div>
