--- a/public/index.html
+++ b/public/index.html
@@ -1,38 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    />
     <title>Telegram WebApp</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="fonts.css" />
+    <link rel="stylesheet" href="styles.css" />
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
-</head>
-<body>
+  </head>
+  <body>
     <!-- Canvas для отображения фото профиля -->
     <div class="profile-photo-container">
-        <canvas id="canvas"></canvas>
+      <canvas id="canvas"></canvas>
     </div>
 
     <!-- Слайдер под изображением для выбора размера пикселя -->
-	<div class="slider-container">
-	    <input type="range" id="pixel-size" min="3" max="35" value="10" step="1">
-	    <span id="pixel-size-value" style="display: none;">10</span>
-	</div>
-
+    <div class="slider-container">
+      <input
+        type="range"
+        id="pixel-size"
+        min="3"
+        max="35"
+        value="10"
+        step="1"
+      />
+      <span id="pixel-size-value" style="display: none">10</span>
+    </div>
 
     <!-- Нижний контейнер с кнопками -->
     <div class="footer">
-        <div class="footer-content">
-            <label for="upload-image" class="custom-label">Upload photo</label>
-            
-            <input type="file" id="upload-image" accept="image/*">
-            <button id="send-image" class="custom-button">Get</button>
+      <div class="footer-content">
+        <label for="upload-image" class="custom-label">Upload photo</label>
 
-
-        </div>
+        <input type="file" id="upload-image" accept="image/*" />
+        <button id="send-image" class="custom-button">Get</button>
+      </div>
     </div>
-
-    <script src="app.js"></script>
-</body>
+    <script src="stylesScripts.js" type="module"></script>
+    <script src="app.js" type="module"></script>
+  </body>
 </html>
-
