--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,7 @@
       </div>
     </div>
     <script src="stylesScripts.js" type="module"></script>
+    <script src="locales.js" type="module"></script>
     <script src="app.js" type="module"></script>
   </body>
 </html>
