--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,8 @@
             <label for="upload-image" class="custom-label">Upload photo</label>
             
             <input type="file" id="upload-image" accept="image/*">
-            <button id="send-image" type="button">Send Image</button>
+            <button id="send-image" type="button" class="custom-button">Send Image</button>
+
 
 
 
