--- a/public/index.html
+++ b/public/index.html
@@ -12,37 +12,77 @@
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
   </head>
   <body>
-    <!-- Canvas для отображения фото профиля -->
-    <div class="profile-photo-container">
-      <canvas id="canvas"></canvas>
-    </div>
+    <section class="loading-screen">
+      <img class="loading-screen_image" src="./assets/loader.gif" />
+      <p class="loading-screen_text"></p>
+    </section>
 
-    <!-- Слайдер под изображением для выбора размера пикселя -->
-    <div class="slider-container">
-      <input
-        type="range"
-        id="pixel-size"
-        min="3"
-        max="35"
-        value="10"
-        step="1"
-      />
-      <span id="pixel-size-value" style="display: none">10</span>
-    </div>
+    <section class="empty-screen">
+      <p class="empty-screen_text"></p>
+      <button class="empty-screen_upload-button button secondary">
+        <img class="button-icon" src="./assets/upload.png" />
+        <input type="file" id="empty-uploader" accept="image/*" />
+        <span class="empty-screen_upload-button_text"></span>
+        <img
+          class="empty-screen_upload-button_icon-spinner"
+          src="./assets/spinner.png"
+        />
+      </button>
+    </section>
 
-    <!-- Нижний контейнер с кнопками -->
-    <div class="footer">
-      <div class="footer-content">
-        <label for="upload-image" class="custom-label">Upload photo</label>
-
-        <input type="file" id="upload-image" accept="image/*" />
-        <button id="send-image" type="button" class="custom-button">
-          Send Image
-        </button>
+    <section class="initial-screen">
+      <div class="initial-screen_image">
+        <canvas id="canvas"></canvas>
       </div>
-    </div>
-    <script src="stylesScripts.js" type="module"></script>
-    <script src="locales.js" type="module"></script>
-    <script src="app.js" type="module"></script>
+
+      <div class="initial-screen_controls">
+        <button class="initial-screen_upload-button button secondary">
+          <img class="button-icon" src="./assets/upload.png" />
+          <input type="file" id="initial-uploader" accept="image/*" />
+          <span class="initial-screen_upload-button_text"></span>
+          <img
+            class="initial-screen_upload-button_icon-spinner"
+            src="./assets/spinner.png"
+          />
+        </button>
+
+        <p class="initial-screen_range-text"></p>
+        <div class="slider-container">
+          <input
+            type="range"
+            id="pixel-size"
+            min="3"
+            max="35"
+            value="10"
+            step="1"
+          />
+          <span id="pixel-size-value" style="display: none">10</span>
+        </div>
+
+        <div class="initial-screen_buttons">
+          <button
+            id="share-button"
+            class="initial-screen_share-button button secondary"
+          ></button>
+          <button
+            id="save-button"
+            class="initial-screen_save-button button primary"
+          >
+            <img
+              class="initial-screen_save-button_icon-spinner"
+              src="./assets/spinner.png"
+            />
+            <span class="initial-screen_save-button_text"></span>
+            <img
+              class="initial-screen_save-button_icon-spinner"
+              src="./assets/spinner.png"
+            />
+          </button>
+        </div>
+      </div>
+    </section>
+
+    <script defer src="locales.js" type="module"></script>
+    <script defer src="app.js" type="module"></script>
   </body>
 </html>
